--- a/index.html
+++ b/index.html
@@ -376,12 +376,14 @@
 
         /* --- NUOVA SEZIONE SOSTENITORI --- */
         .sponsors-section {
-            background-color: var(--white); /* Sfondo bianco per far risaltare i loghi */
+            background-color: var(--white);
         }
 
+        /* Griglia Responsive per Sostenitori */
         .sponsors-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); /* Colonne che si adattano */
+            /* Desktop: colonne automatiche */
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); 
             gap: 40px;
             align-items: center;
             justify-items: center;
@@ -390,22 +392,20 @@
 
         .sponsor-logo {
             max-width: 100%;
-            max-height: 100px; /* Altezza massima uniforme per i loghi */
+            max-height: 100px;
             width: auto;
             object-fit: contain;
             transition: transform 0.3s;
-            /* filter: grayscale(100%);  Decommenta se vuoi i loghi in bianco e nero */
         }
 
         .sponsor-logo:hover {
             transform: scale(1.1);
-            filter: grayscale(0%);
         }
 
         .thank-you {
             text-align: center;
             font-size: 2.5rem;
-            font-family: 'Georgia', serif; /* Stesso font elegante della citazione iniziale */
+            font-family: 'Georgia', serif;
             font-weight: bold;
             font-style: italic;
             color: var(--primary-orange);
@@ -527,8 +527,17 @@
             .social-links a { justify-content: center; width: 100%; }
             .hours-container { flex-direction: column; gap: 5px; }
             
-            /* Loghi più piccoli su mobile per stare bene */
-            .sponsor-logo { max-height: 80px; }
+            /* MODIFICA SPECIFICA PER I LOGHI MOBILE: 2 COLONNE */
+            .sponsors-grid {
+                grid-template-columns: repeat(2, 1fr); /* Forza 2 colonne */
+                gap: 20px; /* Riduce lo spazio */
+            }
+            
+            /* Loghi leggermente più piccoli su mobile per stare bene in 2 colonne */
+            .sponsor-logo { 
+                max-height: 70px; 
+                max-width: 90%; /* Evita che sbordino */
+            }
         }
     </style>
 </head>
